Liquid rocket projects page and GIFs added, hobbies and professional experience updated.

--- a/files/hpr.html
+++ b/files/hpr.html
@@ -94,7 +94,7 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/charlie.JPG" alt="L1 Launch Day">
+				<img class="first-slide" src="../images/launch.gif" alt="L1 Launch Day">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#Charlie" role="button">Charlie Horse</a></p>
