--- a/files/professional.html
+++ b/files/professional.html
@@ -84,8 +84,9 @@
 				<div class="col-sm-6">
 					<h1>Professional Experience</h1>
 					<h2>Specialties:</h2>
-					<h3 style="margin-top: -10px">Mechanical Design, Implementation & Testing;
-					CAD Modeling; Data Acquisition & Analysis</h3>
+					<h3 style="margin-top: -10px">Acoustical Measurements & Processing; 
+					Mechanical Design, Implementation & Testing;
+					Data Acquisition & Analysis</h3>
 				</div>
 				<div class="col-sm-3">
 				</div>
@@ -97,6 +98,56 @@
 	<div class="container-fluid">
 		<h1 class="center">Employment History</h1>
 		<br>
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="panel panel-default">
+					<div class="panel-heading" id="center">
+						<h3 id="title">Engineering Associate</h3>
+						<img class="center-block" src="../images/csa_logo.jpg" alt="Cross Spectrum Acoustics Logo">
+						<h4><a href="https://csacoustics.com/"
+						target="_blank" data-toggle="tooltip" title="www.csacoustics.com">
+						Cross Spectrum Acoustics</a></h4>
+						<h5>November 2019 - Present</h5>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li class="bull_space">Develops MATLAB and Octave scripts to process WAV files 
+							for spectral analysis and automatic event averaging and plotting</li>
+							<li class="bull_space">Manages field meaurements, including coordination 
+							with geotechnical boreholes and sensitive labratory spaces</li>
+							<li class="bull_space">3D Printing parts to improve field measurement 
+							equipment</li>
+							<li>Proficient using NTI and QuickDAQ measurement equipment</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="panel panel-default">
+					<div class="panel-heading" id="center">
+						<h3 id="title">Engineering Associate</h3>
+						<img class="center-block" src="../images/ats_logo.gif" alt="ATS Consulting Logo">
+						<h4><a href="https://www.atsconsulting.com/"
+						target="_blank" data-toggle="tooltip" title="www.atsconsulting.com">
+						ATS Consulting</a></h4>
+						<h5>February 2017 - November 2019</h5>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li class="bull_space">Managed noise and vibration measurement campaigns for rail, 
+							highway, and aircraft projects including multi-week international trips</li>
+							<li class="bull_space">Analyzed and modeled noise & vibration using MATLAB, 
+							Excel, ArcGIS, CadnaA, and RCNM</li>
+							<li class="bull_space">Authored technical reports to assess project noise 
+							and vibration against applicable standards including FTA, CEQA, NEPA, HUD, 
+							and local city and county ordinances</li>
+							<li>Proficient using Larson Davis, Bruel & Kjaer, Norsonic, and RION 
+							measurement equipment</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-sm-4 col-sm-push-4">
 				<div class="panel panel-default">
@@ -111,9 +162,9 @@
 					<div class="panel-body">
 						<ul class="bullets">
 							<li class="bull_space">Designed and assembled air bearing free flight platforms to
-							serve as a testbed for cellularized spacecraft research.</li>
+							serve as a testbed for cellularized spacecraft research</li>
 							<li>Repaired bell-jar vacuum tables to a 10<sup>-5</sup> Torr capability
-							for CubeSat testing.</li>
+							for CubeSat testing</li>
 						</ul>
 					</div>
 				</div>
@@ -131,10 +182,10 @@
 						<ul class="bullets">
 							<li class="bull_space">Engineered, tested, and presented potential hardware alterations
 							to the Precision Guidance Kit (PGK) cover to senior engineers for future
-							implementation.</li>
+							implementation</li>
 							<li class="bull_space">Drafted molds and created drawings in Pro-Engineer CAD that were
-							machined & used to create hardware.</li>
-							<li>Oversaw tests and compiled data for 25mm and 20mm Airburst munitions.</li>
+							machined & used to create hardware</li>
+							<li>Oversaw tests and compiled data for 25mm and 20mm Airburst munitions</li>
 						</ul>
 					</div>
 				</div>
@@ -150,11 +201,13 @@
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
-							<li class="bull_space">Developed organizational structure to facilitate a 15% donation increase per year.</li>
-							<li class="bull_space">Directed operations including the budget, scheduling, permits, payments, ticketing,
-							reception, press, and staff for performance runs with 500 audience members.</li>
+							<li class="bull_space">Developed organizational structure to facilitate a 15% 
+							donation increase per year</li>
+							<li class="bull_space">Directed operations including the budget, scheduling, 
+							permits, payments, ticketing, reception, press, and staff for performance runs 
+							with 500 audience members</li>
 							<li>Recorded company income/expenses in QuickBooks and used the data to create and
-							analyze budget reports.</li>
+							analyze budget reports</li>
 						</ul>
 					</div>
 				</div>
