--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -95,34 +95,34 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/colorado.jpg" alt="Keith as USC Drum Major">
+				<img class="first-slide" src="../images/benchy.jpg" alt="3D Printed Items">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#TMB" role="button">Marching Band</a></p>
+						<p><a class="btn btn-lg btn-info" href="#3DPrint" role="button">3D Printing</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/garden.jpg" alt="Keith's Garden">
+				<img class="second-slide" src="../images/keith_scuba.png" alt="Keith Scuba Diving">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#garden" role="button">Gardening</a></p>
+						<p><a class="btn btn-lg btn-info" href="#Scuba" role="button">Scuba Diving</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/yoerg_beer.jpg" alt="Yoerg's Beer Logo">
+				<img class="third-slide" src="../images/trumpets.jpg" alt="USC Trumpet class of 2012 in Colorado">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#beer" role="button">Brewing Beer</a></p>
+						<p><a class="btn btn-lg btn-info" href="#USCBand" role="button">Marching Band</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="fourth-slide" src="../images/exercise.jpg" alt="10k Run">
+				<img class="fourth-slide" src="../images/yoerg_beer.jpg" alt="Yoerg's Beer Logo">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#exercise" role="button">Athletics</a></p>
+						<p><a class="btn btn-lg btn-info" href="#Homebrew" role="button">Brewing Beer</a></p>
 					</div>
 				</div>
 			</div>
@@ -140,6 +140,46 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
+		<hr class="featurette-divider" id="3DPrint">
+		<div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading">3D Printer</h2>
+				<p class="lead">Playing with Plastic</p>
+				<p>A few years ago a friend gave me an unopened, build-it yourself 3D printer 
+				that had been collecting dust in his garage. It was an Anet A8, and he informed 
+				me immediately that I would need to update the frame to extruded aluminum, among 
+				several other recommended modifications. Of course, those modifications could be 
+				aided by some cleverly designed 3D printed parts.</p>
+				<p>Thus started a mild obsession with making changes to my new favorite machine. 
+				I have printed mounts, brackets, cable chains, wall hooks, hinges, and pieces of  
+				the printer enclosure itself to name a few. The printer runs on an Octoprint server 
+				hosted on a Raspberry Pi so that prints can be controlled via a networked internet 
+				browser. A connected camera and LED strip lighting allow remote monitoring and 
+				timelapse videos.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive center-block" src="../images/3d_printer.jpg"
+				alt="Keith's 3D Printer">
+			</div>
+		</div>
+
+		<hr class="featurette-divider" id="Scuba">
+		<div class="row featurette">
+			<div class="col-md-7 col-md-push-5">
+				<h2 class="featurette-heading">Scuba Diving</h2>
+				<p class="lead">Get Low</p>
+				<p>In March of 2020 I took classes to earn my open water scuba certification The idea was to take 
+				a trip to Austrailia to dive the Great Barrier Reef the following month. Unfortunately, 2020 had 
+				other ideas, and my overseas excursion had to be postponed.</p>
+				<p>While I'm still a beginner, I hope to log many more hours under the sea in the coming year as 
+				 I wait to reschedule my Australia trip.</p>
+			</div>
+			<div class="col-md-5 col-md-pull-7">
+				<img class="featurette-image img-responsive center-block" src="../images/scuba.gif"
+				alt="Keith Biking in the Door County triathlon">
+			</div>
+		</div>
+		
 		<hr class="featurette-divider" id="USCBand">
 		<div class="row featurette">
 			<div class="col-md-7">
@@ -160,32 +200,14 @@
 				
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/trumpets.jpg"
-				alt="USC Trumpet class of 2012 in Colorado">
+				<img class="featurette-image img-responsive center-block" src="../images/colorado.jpg" 
+				alt="Keith as USC Drum Major">
 			</div>
 		</div>
 	
-		<hr class="featurette-divider" id="garden">
-		<div class="row featurette">
-			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Home Gardening</h2>
-				<p class="lead">Grow LA Victory Gardener</p>
-				<p>In the spring of 2015 a single mint plant affectionately named "Marty" laid the groundwork for a passion that 
-				is continuing to grow. I have been consistently growing vegetables and herbs on my balcony ever since, and 
-				have even helped many friends start their own gardens as well.</p>
-				<p>Recently I completed a gardening class taught by certified Master Gardeners, and I continue to do personal 
-				research to increase the yield from my crops. I'm excited to one day own a home with a yard so I can plant crops 
-				that require more space than a balcony container offers.</p>
-			</div>
-			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/garden_cert.jpg"
-				alt="Victory Garden Certificate">
-			</div>
-		</div>
-		
 		<hr class="featurette-divider" id="Homebrew">
 		<div class="row featurette">
-			<div class="col-md-7">
+			<div class="col-md-7 col-md-push-5">
 				<h2 class="featurette-heading">Brewing Beer</h2>
 				<p class="lead">Homebrew Enthusiast</p>
 				<p>Beer has been brewed in my family for generations. As a direct descendant of the man that opened the first 
@@ -196,29 +218,12 @@
 				for the same reason. These challenges necessitate creative solutions and I enjoy the hands-on task of building 
 				those solutions. I hope to build a keg refrigerator soon to further improve the quality of my beer.</p>
 			</div>
-			<div class="col-md-5">
+			<div class="col-md-5 col-md-pull-7">
 				<img class="featurette-image img-responsive center-block" src="../images/beer_brew.jpg"
 				alt="Keith Brewing Beer at Home">
 			</div>
 		</div>
-
-		<hr class="featurette-divider" id="exercise">
-		<div class="row featurette">
-			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Athletics</h2>
-				<p class="lead">Swim, Bike, Run</p>
-				<p>I have been involved with sports my entire life. I began competitively swimming as a 6 year old, and continued 
-				swimming in meets until I was 19. I still swim recreationally and enjoy hiking and pick-up 
-				football games with friends to keep in shape.</p>
-				<p>In official races I have competed as a runner and as a triathlete. My longest triathlon was a half-Ironman 
-				distance which consists of a 1.2-mile swim, a 56-mile bike, and a 13.1-mile run. It's on my bucket list to one 
-				day complete a full Ironman race, and I am working (slowly) to get into shape for that.</p>
-			</div>
-			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/triathlon.jpg"
-				alt="Keith Biking in the Door County triathlon">
-			</div>
-		</div>
+	
 		
 		<hr class="featurette-divider">
 	</div>
