Fixed .PNG image

--- a/files/liquid_rockets.html
+++ b/files/liquid_rockets.html
@@ -94,7 +94,7 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/thrust_stand.png" alt="3D drawing of thrust stand">
+				<img class="first-slide" src="../images/thrust_stand.PNG" alt="3D drawing of thrust stand">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#test-stand" role="button">Test Stand</a></p>
@@ -147,7 +147,7 @@
 				versatility at an affordable price.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/daq.png"
+				<img class="featurette-image img-responsive center-block" src="../images/daq.PNG"
 				alt="Electronics board hand soldered by Keith">
 			</div>
 		</div>
