--- a/files/liquid_rockets.html
+++ b/files/liquid_rockets.html
@@ -147,7 +147,7 @@
 				versatility at an affordable price.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/daq.PNG"
+				<img class="featurette-image img-responsive center-block" src="../images/DAQ.PNG"
 				alt="Electronics board hand soldered by Keith">
 			</div>
 		</div>
