Image save type updates

--- a/files/hpr.html
+++ b/files/hpr.html
@@ -193,7 +193,7 @@
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/L3_motor.JPG"
-				alt="Coding for this site">
+				alt="Motor mount for level 3 rocket">
 			</div>
 		</div>
 		
