"environmental engineer" and photo test.

--- a/files/flare.html
+++ b/files/flare.html
@@ -212,7 +212,7 @@
 				a text video game, and built small robots to name just a few projects.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/college.JPG"
+				<img class="featurette-image img-responsive center-block" src="../images/college.jpg"
 				alt="Keith and a student working on an Arduino project">
 			</div>
 		</div>
