--- a/files/professional.html
+++ b/files/professional.html
@@ -102,7 +102,7 @@
 			<div class="col-sm-6">
 				<div class="panel panel-default">
 					<div class="panel-heading" id="center">
-						<h3 id="title">Engineering Associate</h3>
+						<h3 id="title">Associate Environmental Engineer</h3>
 						<img class="center-block" src="../images/csa_logo.jpg" alt="Cross Spectrum Acoustics Logo">
 						<h4><a href="https://csacoustics.com/"
 						target="_blank" data-toggle="tooltip" title="www.csacoustics.com">
@@ -125,7 +125,7 @@
 			<div class="col-sm-6">
 				<div class="panel panel-default">
 					<div class="panel-heading" id="center">
-						<h3 id="title">Engineering Associate</h3>
+						<h3 id="title">Associate Environmental Engineer</h3>
 						<img class="center-block" src="../images/ats_logo.gif" alt="ATS Consulting Logo">
 						<h4><a href="https://www.atsconsulting.com/"
 						target="_blank" data-toggle="tooltip" title="www.atsconsulting.com">
