Image save type updates

--- a/files/flare.html
+++ b/files/flare.html
@@ -167,7 +167,7 @@
 				certification, allowing them to access restricted launchpad areas.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/middle_school_class.JPG"
+				<img class="featurette-image img-responsive center-block" src="../images/middle_school_class.jpg"
 				alt="Keith teaches a middle school class">
 			</div>
 		</div>
@@ -191,7 +191,7 @@
 				constructed rockets can be flown in the desert on a high power motor.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/high_school_kids.JPG"
+				<img class="featurette-image img-responsive center-block" src="../images/high_school_kids.jpg"
 				alt="Keith and a class of high school kids">
 			</div>
 		</div>
