Fixed image reference (PNG to png)

--- a/files/hpr.html
+++ b/files/hpr.html
@@ -192,7 +192,7 @@
 				it on this site afterwards.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/L3_motor.JPG"
+				<img class="featurette-image img-responsive center-block" src="../images/L3_motor.jpg"
 				alt="Motor mount for level 3 rocket">
 			</div>
 		</div>
