Updated image vs text order in hobbies & hpr pages

--- a/files/hpr.html
+++ b/files/hpr.html
@@ -132,10 +132,19 @@
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Charlie">
+		<h2 class="featurette-heading">Charlie Horse</h2>
+		<p class="lead">Level 1 & 2 Certification Rocket</p>
 		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">Charlie Horse</h2>
-				<p class="lead">Level 1 & 2 Certification Rocket</p>
+			<div class="col-md-5 col-md-push-7">
+				<div class="embed-responsive embed-responsive-16by9">
+					<video controls allowfullscreen>
+						<source src="../images/Launch.mp4">
+					</video>
+				</div>
+				<p></p>
+			</div>
+			<div class="col-md-7 col-md-pull-5">
+			<p><p/>
 				<p>I built this rocket in 2016 from a Madcow Torrent kit and dubbed it "Charlie Horse."
 				The rocket's maiden voyage was on August 13 of that year at the Lucerne Dry Lake Bed, 
 				the launch site for the <a href="http://www.rocstock.org/" target="_blank" data-toggle="tooltip" 
@@ -148,13 +157,6 @@
 				figurine (who has been on every flight). I put together this video of the most recent flight at the 
 				<a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
 				Reaction Research Society</a> Mojave Test Area launch site, to a piece of music I'm fond of.</p>
-			</div>
-			<div class="col-md-5">
-				<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen>
-						<source src="../images/Launch.mp4">
-					</video>
-				</div>
 			</div>
 		</div>
 	
