--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -141,10 +141,16 @@
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
 		<hr class="featurette-divider" id="3DPrint">
+		<h2 class="featurette-heading">3D Printer</h2>
+		<p class="lead">Playing with Plastic</p>
 		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">3D Printer</h2>
-				<p class="lead">Playing with Plastic</p>
+			<div class="col-md-5 col-md-push-7">
+				<img class="featurette-image img-responsive center-block" src="../images/3d_printer.jpg"
+				alt="Keith's 3D Printer">
+			<p></p>
+			</div>
+			<div class="col-md-7 col-md-pull-5">
+			<p></p>
 				<p>A few years ago a friend gave me an unopened, build-it yourself 3D printer 
 				that had been collecting dust in his garage. It was an Anet A8, and he informed 
 				me immediately that I would need to update the frame to extruded aluminum, among 
@@ -156,10 +162,6 @@
 				hosted on a Raspberry Pi so that prints can be controlled via a networked internet 
 				browser. A connected camera and LED strip lighting allow remote monitoring and 
 				timelapse videos.</p>
-			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/3d_printer.jpg"
-				alt="Keith's 3D Printer">
 			</div>
 		</div>
 
@@ -181,10 +183,16 @@
 		</div>
 		
 		<hr class="featurette-divider" id="USCBand">
+		<h2 class="featurette-heading">USC Trojan Marching Band</h2>
+		<p class="lead">Drum Major & Trumpet TA</p>
 		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">USC Trojan Marching Band</h2>
-				<p class="lead">Drum Major & Trumpet TA</p>
+			<div class="col-md-5 col-md-push-7">
+				<img class="featurette-image img-responsive center-block" src="../images/colorado.jpg" 
+				alt="Keith as USC Drum Major">
+				<p></p>
+			</div>
+			<div class="col-md-7 col-md-pull-5">
+			<p></p>
 				<p>I began playing the trumpet at 10 years old. 
 				While a student at the University of Southern California, I joined the <a href="http://www.usc.edu/dept/band/"
 				target="_blank" data-toggle="tooltip" title="www.usc.edu/dept/band">Trojan Marching Band</a>.</p>
@@ -197,11 +205,7 @@
 						<li>'12-'13: Drum Major</li>
 						<li>'13-'15: Trumpet Teaching Assistant</li>
 					<ul>
-				
-			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/colorado.jpg" 
-				alt="Keith as USC Drum Major">
+				</p>
 			</div>
 		</div>
 	
