Created pages for each Charlie Horse launch, added photos and videos.

--- a/files/flare.html
+++ b/files/flare.html
@@ -92,7 +92,7 @@
 			alt="FLARE logo" width="275" height="175" style="margin-left: auto; margin-right: auto; 
 			display: block; padding-bottom: 15px;">
 		</figure>
-		<div class="container-fluid">
+		<div class="container-fluid" style="width: 75%">
 			<div class="thirdwidth">
 			<p>In 2016 I was introduced to a local non-profit organization called <a href="http://www.tamuseum.org/"
 			target="_blank" data-toggle="tooltip" title="www.tamuseum.org">Tomorrow's Aeronautical Museum</a> 
