--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Keith W Yoerg</a>
+				<a class="navbar-brand" href="#">Keith W Yoerg, PE</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
@@ -78,7 +78,7 @@
 	<!-- Main Content -->
 	<div class="container-fluid">
 		<div class="text-box">
-			<h1 style="font-variant: small-caps; padding-top: 15px;">Sand Dunes to Moons</h1>
+			<h1 style="font-variant: small-caps; padding-top: 15px;">Keith W Yoerg, PE</h1>
 			<h3>I'm an engineer afflicted with the belief that the most inspiring
 			feats of humanity STEM from expanding the legacy of great engineers.</h3>
 			<br>
