Navigation bar update for Charlie Horse Log

--- a/files/charlie_horse.html
+++ b/files/charlie_horse.html
@@ -51,7 +51,10 @@
 						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li class="active"><a href="#">High Power Solids</a></li>
+							<li><a href="hpr.html">High Power Solids</a></li>
+								<li class="active" style="padding-left: 15px">
+									<a href="#">Charlie Horse Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
