--- a/files/hpr.html
+++ b/files/hpr.html
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="../index.html">Keith W Yoerg</a>
+				<a class="navbar-brand" href="../index.html">Keith W Yoerg, PE</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
@@ -52,10 +52,12 @@
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li class="active"><a href="#">High Power Solids</a></li>
+								<li style="padding-left: 15px">
+									<a href="charlie_horse.html">Charlie Horse Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
-					</li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" 
 						href="hobbies.html">Other Interests
@@ -94,7 +96,7 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/launch.gif" alt="L1 Launch Day">
+				<img class="first-slide" src="../images/hpr_rockets/charlie_horse/Flight8/CH_F8_pad.gif" alt="GIF of Launch #8">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#Charlie" role="button">Charlie Horse</a></p>
@@ -136,11 +138,9 @@
 		<p class="lead">Level 1 & 2 Certification Rocket</p>
 		<div class="row featurette">
 			<div class="col-md-5 col-md-push-7">
-				<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen>
-						<source src="../images/Launch.mp4">
-					</video>
-				</div>
+				<img class="featurette-image img-responsive center-block" src="../images/skid_launch.png" 
+				alt="Still photo of a rocket launch">
+				
 				<p></p>
 			</div>
 			<div class="col-md-7 col-md-pull-5">
