--- a/files/ch_f10.html
+++ b/files/ch_f10.html
@@ -52,9 +52,13 @@
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="hpr.html">High Power Solids</a></li>
+								<li style="padding-left: 15px">
+									<a href="charlie_horse.html">Charlie Horse Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
+					</li>
 					</li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" 
