--- a/files/fam_history.html
+++ b/files/fam_history.html
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="../index.html">Keith W Yoerg</a>
+				<a class="navbar-brand" href="../index.html">Keith W Yoerg, PE</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
@@ -52,6 +52,9 @@
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="hpr.html">High Power Solids</a></li>
+								<li style="padding-left: 15px">
+									<a href="charlie_horse.html">Charlie Horse Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
