--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
 					<li><a href="files/fam_history.html">Family History</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="rocketry.html">Rocketry
+						href="files/rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="files/hpr.html">High Power Solids</a></li>
+								<li style="padding-left: 15px">
+									<a href="files/charlie_horse.html">Charlie Horse Log</a>
+								</li>
 							<li><a href="files/liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="files/flare.html">Education & Outreach</a></li>
 						</ul>
