Updated report and descriptions of Charlie Horse launches.

--- a/files/ch_f10.html
+++ b/files/ch_f10.html
@@ -94,6 +94,7 @@
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Report">
 		<h2 class="featurette-heading">Report</h2>
+		<p class="lead">2,893 ft | Mach 0.50</p>
 		<div class="row featurette">
 			<div class="col-md-5 col-md-push-7">
 				<img class="featurette-image img-responsive center-block" 
@@ -107,7 +108,7 @@
 				<p>Flight #10 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
 				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera,
 				an onboard camera, and a video taken by Dave Nordling on a cell phone. This footage was collected and combined into a 
-				video which can be seen below, scored to a piece of music I'm fond of.
+				video which can be seen below, scored to a piece of music I'm fond of.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
 				flight computer, and was the second flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
 				to the RX Receiver module, which is housed in a 3D printed box I designed and printed, a photo of which is included below. 
