--- a/files/ch_f4.html
+++ b/files/ch_f4.html
@@ -93,6 +93,7 @@
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Report">
 		<h2 class="featurette-heading">Report</h2>
+		<p class="lead">3,948 ft | Mach 0.69</p>
 		<div class="row featurette">
 			<div class="col-md-5 col-md-push-7">
 				<img class="featurette-image img-responsive center-block" 
@@ -103,18 +104,13 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #4 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera,
-				an onboard camera, and a video taken by Dave Nordling on a cell phone. This footage was collected and combined into a 
-				video which can be seen below, scored to a piece of music I'm fond of.
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the second flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
-				to the RX Receiver module, which is housed in a 3D printed box I designed and printed, a photo of which is included below. 
-				This box was my second design and includes a holster area for my cell phone, which is used to display the track data.</p>
-				<p>The flight was a success, but the Eggfinder TX transmitter came loose from the mounting, which likely happened when 
-				the rocket landed. The antenna was poorly soldered (I should have used more) and it came loose from the board. There was no 
-				other damage to the board or rocket, in part due to the use of nylon screws into metal standoffs to mound the Stratologger 
-				flight computer & TX transmitter.</p>
+				<p>Flight #4 was conducted at the at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				launch site during the 2019 Tripoli National Sport Launch (NSL). Charlie Horse's first launch of the event was the first 
+				of my launches to be documented by a pad-side Go Pro camera, a slow-motion video of which can be seen below.</p>
+				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
+				flight computer. Both performed admirably and without incident.</p>
+				<p>The flight was a success! There was no damage to the rocket or payload, and the rocket went on to launch again later 
+				during the NSL event.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
