--- a/files/ch_f5.html
+++ b/files/ch_f5.html
@@ -93,6 +93,7 @@
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Report">
 		<h2 class="featurette-heading">Report</h2>
+		<p class="lead">4,642 ft | Mach 0.89</p>
 		<div class="row featurette">
 			<div class="col-md-5 col-md-push-7">
 				<img class="featurette-image img-responsive center-block" 
@@ -103,18 +104,17 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #5 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera,
-				an onboard camera, and a video taken by Dave Nordling on a cell phone. This footage was collected and combined into a 
-				video which can be seen below, scored to a piece of music I'm fond of.
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the second flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
-				to the RX Receiver module, which is housed in a 3D printed box I designed and printed, a photo of which is included below. 
-				This box was my second design and includes a holster area for my cell phone, which is used to display the track data.</p>
-				<p>The flight was a success, but the Eggfinder TX transmitter came loose from the mounting, which likely happened when 
-				the rocket landed. The antenna was poorly soldered (I should have used more) and it came loose from the board. There was no 
-				other damage to the board or rocket, in part due to the use of nylon screws into metal standoffs to mound the Stratologger 
-				flight computer & TX transmitter.</p>
+				<p>Flight #5 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				launch site during the 2019 Tripoli National Sport Launch (NSL). Charlie Horse's second launch of the event was 
+				documented by a pad-side Go Pro camera, as well as a DJI Phanton II Drone hovering several hundred feet in the air. 
+				A combined video of these perspectived can be seen below.</p>
+				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
+				flight computer. Both performed admirably and without incident.</p>
+				<p>The flight was a success, and is currently the record holder for fastest & highest flight on record for both this 
+				rocket and any of my rockets. One minor issue was that the nose cone eye bolt that attaches to the shock cord was 
+				ripped out of the nose cone. This caused the nose cone to fall back to the ground without a parachute and it created 
+				an interesting chipped pattern in the paint. The photo below looks to me like a lady in a long dress holing a shotgun... 
+				What do you see?</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
@@ -132,15 +132,6 @@
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
 						<source src="../images/hpr_rockets/charlie_horse/Flight5/CH_F5.mov">
-					</video>
-					</div>
-				</div>
-			</div>
-			<div class="item" style="max-width: 70%; margin: 0 auto; top: 50%">
-				<div style="max-width:900px; margin: 0 auto">
-					<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen muted>
-						<source src="../images/hpr_rockets/charlie_horse/Flight5/CH_F5_pad.mp4">
 					</video>
 					</div>
 				</div>
