--- a/files/charlie_horse.html
+++ b/files/charlie_horse.html
@@ -199,7 +199,7 @@
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Charlie">
 		<h2 class="featurette-heading">Summary</h2>
-		<p class="lead">Click links for detailed flight info</p>
+		<p class="lead">Click buttons above or links below for detailed info</p>
 		<div class="row featurette">
 			<table class="table">
 				<thead>
