--- a/files/ch_f1.html
+++ b/files/ch_f1.html
@@ -94,20 +94,16 @@
 		<hr class="featurette-divider" id="Report">
 		<h2 class="featurette-heading">Report</h2>
 		<p class="lead">Tripoli Level 1 Certification Flight</p>
-		<div class="row featurette">
+		<div class="row featurette" style="width: 90%; padding-left:15px">
 			<p><p/>
-				<p>Flight #1 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera,
-				an onboard camera, and a video taken by Dave Nordling on a cell phone. This footage was collected and combined into a 
-				video which can be seen below, scored to a piece of music I'm fond of.
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the second flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
-				to the RX Receiver module, which is housed in a 3D printed box I designed and printed, a photo of which is included below. 
-				This box was my second design and includes a holster area for my cell phone, which is used to display the track data.</p>
-				<p>The flight was a success, but the Eggfinder TX transmitter came loose from the mounting, which likely happened when 
-				the rocket landed. The antenna was poorly soldered (I should have used more) and it came loose from the board. There was no 
-				other damage to the board or rocket, in part due to the use of nylon screws into metal standoffs to mound the Stratologger 
-				flight computer & TX transmitter.</p>
+				<p>Flight #1 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				launch site and was used to successfully earn me a level 1 certification with the Tripoli Rocketry Association. 
+				A video of the launch was recorded with a cell phone and can be seen below.</p>
+				<p>The payload bay carried a Charlie Brown figurine that has since flown on every flight of this rocket. The parachute 
+				on this launch was deployed by the motor. Because there was no flight computer, the max altitude and velocity 
+				are unknown for this flight.</p></p>
+				<p>The flight was a success! The rocket recovered without damage to the rocket, which qualified 
+				me for a level 1 certification. A cell phone video of this launch and some photos are included below.</p>
 		</div>
 		<hr class="featurette-divider">
 	</div>
