--- a/files/ch_f3.html
+++ b/files/ch_f3.html
@@ -93,7 +93,7 @@
 	<div class="container marketing">
 		<hr class="featurette-divider" id="Report">
 		<h2 class="featurette-heading">Report</h2>
-		<p class="lead">Tripoli Level 2 Certification Flight</p>
+		<p class="lead">3,154 ft | Mach 0.59 | Tripoli Level 2 Certification</p>
 		<div class="row featurette">
 			<div class="col-md-5 col-md-push-7">
 				<img class="featurette-image img-responsive center-block" 
@@ -104,18 +104,18 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #3 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera,
-				an onboard camera, and a video taken by Dave Nordling on a cell phone. This footage was collected and combined into a 
-				video which can be seen below, scored to a piece of music I'm fond of.
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the second flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
-				to the RX Receiver module, which is housed in a 3D printed box I designed and printed, a photo of which is included below. 
-				This box was my second design and includes a holster area for my cell phone, which is used to display the track data.</p>
-				<p>The flight was a success, but the Eggfinder TX transmitter came loose from the mounting, which likely happened when 
-				the rocket landed. The antenna was poorly soldered (I should have used more) and it came loose from the board. There was no 
-				other damage to the board or rocket, in part due to the use of nylon screws into metal standoffs to mound the Stratologger 
-				flight computer & TX transmitter.</p>
+				<p>Flight #3 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				launch site and was used to successfully earn me a level 2 certification with the Tripoli Rocketry Association. 
+				A video of the launch was recorded with a cell phone and can be seen below.</p>
+				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, and was the first flight
+				using the Stratologger CF dual deployment flight computer. The flight computer was used to deploy the parachutes 
+				and recorded the data shown in the plot above. A photo of the new onboard location for Charlie Brown (the back side 
+				of the payload sled) can be seen as he was "strapped-in" under moonlight the night before the launch.</p>
+				<p>It seemed like a close one at first, but ultimately, the flight was a success! On the first launch attempt there
+				was an issue with the motor. It started to ignite but did not fully and then smoked lightly for a bit. Luckily, there 
+				was no damage to the rocket, and a replacement motor was loaded into the motor mount. Once there was a break in the 
+				wind, the rocket was launched with the new motor and recovered without damage to the rocket or payload, which qualified 
+				me for a level 2 certification.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
