--- a/files/hpr.html
+++ b/files/hpr.html
@@ -146,17 +146,13 @@
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
 				<p>I built this rocket in 2016 from a Madcow Torrent kit and dubbed it "Charlie Horse."
-				The rocket's maiden voyage was on August 13 of that year at the Lucerne Dry Lake Bed, 
-				the launch site for the <a href="http://www.rocstock.org/" target="_blank" data-toggle="tooltip" 
-				title="www.rocstock.org">Rocketry Organization of California</a>. The result of the flight was
-				a success, and earned me a Level 1 certification with the <a href="http://www.tripoli.org" target="_blank" 
-				data-toggle="tooltip" title="tripoli.org">Tripoli Rocketry Association</a>.
-				<p>Charlie Horse took a few more flights and on July 11, 2017 was flown with a dual deployment 
-				parachute system to earn a level 2 certification. Charlie Horse has flown a total of 10 times 
-				to date and has carried various payloads including a camera, a GPS tracker, and a Charlie Brown 
-				figurine (who has been on every flight). I put together this video of the most recent flight at the 
-				<a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site, to a piece of music I'm fond of.</p>
+				The rocket's maiden voyage was in August of that year and earned me a Tripoli Level 1
+				certification. Charlie Horse has flown a total of 10 times to date and has carried 
+				various payloads including a camera, a GPS tracker, and a Charlie Brown figurine 
+				(who has been on every flight).</p>
+				<p>More details from each flight including data plots, photos, and videos are available 
+				in the <a href="charlie_horse.html">Charlie Horse Flight Log.</a> A video made from footage of 
+				Charlie Horse's 10th flight is available <a href="ch_f10.html#Photos">here</a>.</p>
 			</div>
 		</div>
 	
@@ -172,7 +168,7 @@
 				into the sky is an added benefit!</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/rocket_wall.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/other_hpr.jpg"
 				alt="Launch of Estes rocket with TAM students">
 			</div>
 		</div>
