Launch log table scroll, nex & previous flight button fix. Typo and small text fixes.

--- a/files/ch_f1.html
+++ b/files/ch_f1.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f10.html" role="button">Previous</a>
-			Charlie Horse Flight 1
-			<a class="btn btn-lg btn-info" href="ch_f2.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f10.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 1</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f2.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -102,7 +113,7 @@
 				<p>The payload bay carried a Charlie Brown figurine that has since flown on every flight of this rocket. The parachute 
 				on this launch was deployed by the motor. Because there was no flight computer, the max altitude and velocity 
 				are unknown for this flight.</p></p>
-				<p>The flight was a success! The rocket recovered without damage to the rocket, which qualified 
+				<p>The flight was a success! Charlie Horse was recovered without any damage, which qualified 
 				me for a level 1 certification. A cell phone video of this launch and some photos are included below.</p>
 		</div>
 		<hr class="featurette-divider">
