--- a/files/ch_f2.html
+++ b/files/ch_f2.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f1.html" role="button">Previous</a>
-			Charlie Horse Flight 2
-			<a class="btn btn-lg btn-info" href="ch_f3.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f1.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 2</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f3.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -103,7 +114,7 @@
 				are unknown for this flight.</p>
 				<p>The only record of the successful flight is the video shown below. The exact date of the flight is unknown 
 				because the video from the launch was saved with a new date when moved to a computer several weeks or months after 
-				the launch.</p>
+				the launch, so the metadata on when the file was "created" was overwritten. Nevertheless, it was a successful flight.</p>
 		</div>
 		<hr class="featurette-divider">
 	</div>
