--- a/files/ch_f3.html
+++ b/files/ch_f3.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f2.html" role="button">Previous</a>
-			Charlie Horse Flight 3
-			<a class="btn btn-lg btn-info" href="ch_f4.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f2.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 3</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f4.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -105,17 +116,17 @@
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
 				<p>Flight #3 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
-				launch site and was used to successfully earn me a level 2 certification with the Tripoli Rocketry Association. 
+				launch site and earned me a level 2 certification with the Tripoli Rocketry Association. 
 				A video of the launch was recorded with a cell phone and can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, and was the first flight
 				using the Stratologger CF dual deployment flight computer. The flight computer was used to deploy the parachutes 
 				and recorded the data shown in the plot above. A photo of the new onboard location for Charlie Brown (the back side 
 				of the payload sled) can be seen as he was "strapped-in" under moonlight the night before the launch.</p>
 				<p>It seemed like a close one at first, but ultimately, the flight was a success! On the first launch attempt there
-				was an issue with the motor. It started to ignite but did not fully and then smoked lightly for a bit. Luckily, there 
+				was an issue with the motor. It started to ignite but did not fully light and instead smoked for a bit. Luckily, there 
 				was no damage to the rocket, and a replacement motor was loaded into the motor mount. Once there was a break in the 
 				wind, the rocket was launched with the new motor and recovered without damage to the rocket or payload, which qualified 
-				me for a level 2 certification.</p>
+				me for the level 2 certification.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
