--- a/files/ch_f4.html
+++ b/files/ch_f4.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f3.html" role="button">Previous</a>
-			Charlie Horse Flight 4
-			<a class="btn btn-lg btn-info" href="ch_f5.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f3.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 4</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f5.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -109,7 +120,7 @@
 				of my launches to be documented by a pad-side Go Pro camera, a slow-motion video of which can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
 				flight computer. Both performed admirably and without incident.</p>
-				<p>The flight was a success! There was no damage to the rocket or payload, and the rocket went on to launch again later 
+				<p>The flight was a success! There was no damage to the rocket or payload, and the Charlie Horse went on to launch again later 
 				during the NSL event.</p>
 			</div>
 		</div>
