--- a/files/ch_f6.html
+++ b/files/ch_f6.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f5.html" role="button">Previous</a>
-			Charlie Horse Flight 6
-			<a class="btn btn-lg btn-info" href="ch_f7.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f5.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 6</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f7.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -112,9 +123,9 @@
 				<p>The flight was a partial success. One connection between the top and bottom sections of the rocket was missed 
 				during assembly and prep. This means that the lower half of the rocket remained 
 				connected to the drouge parachute which deployed at apogee and the upper, nose cone section (which houses the 
-				flight computer) tumbled back until main parachute deployment at 700 ft above ground level. This can be seen in the 
+				flight computer) tumbled back until the main parachute deployment at 700 ft above ground level. This can be seen in the 
 				data plot by comparing the steep slope of the altitude line and squiggley-ness of the velocity line between the 
-				drouge & main deployments compared to a nominal flight. Fortunately none of the electronics were damaged.</p>
+				drouge & main deployments compared to a nominal flight. Fortunately, the electronics and rocket were not damaged.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
