--- a/files/ch_f8.html
+++ b/files/ch_f8.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f7.html" role="button">Previous</a>
-			Charlie Horse Flight 8
-			<a class="btn btn-lg btn-info" href="ch_f9.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f7.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 8</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f9.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
