--- a/files/ch_f9.html
+++ b/files/ch_f9.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f8.html" role="button">Previous</a>
-			Charlie Horse Flight 9
-			<a class="btn btn-lg btn-info" href="ch_f10.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f8.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 9</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f10.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -107,7 +118,7 @@
 				<p>Flight #9 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site. A Go Pro camera was set up to take video beside the launch pad. The first attempt at a launch burned 
 				the igniter without starting the motor, which was recorded by the Go Pro. Unfortunately there was a malfunction 
-				when starting the camera for the second, successful launch attempt, so no pad-side footage was recorded. The only  
+				when starting the camera for the second, successful launch attempt so no pad-side footage was recorded of the launch. The only  
 				recorded video came from the onboard camera, becasue I was using my cell phone to test out the newly installed 
 				GPS tracker.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
@@ -119,7 +130,8 @@
 				sections of the rocket was missed during assembly and prep. This means that the lower half of the rocket remained 
 				connected to the drouge parachute which deployed at apogee and the upper, nose cone section (which houses the 
 				flight computer) tumbled back until main parachute deployment at 700 ft above ground level. This can be seen in the 
-				data plot by comparing the steep slope of the lines between the drouge & main deployments compared to a nominal flight.</p>
+				data plot by comparing the steep slope of the altitude line and squiggley-ness of the velocity line between the 
+				drouge & main deployments compared to a nominal flight.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
