--- a/files/ch_f10.html
+++ b/files/ch_f10.html
@@ -83,10 +83,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f9.html" role="button">Previous</a>
-			Charlie Horse Flight 10
-			<a class="btn btn-lg btn-info" href="ch_f1.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f9.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 10</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f1.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -108,11 +119,11 @@
 				<p>Flight #10 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
 				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera,
 				an onboard camera, and a video taken by Dave Nordling on a cell phone. This footage was collected and combined into a 
-				video which can be seen below, scored to a piece of music I'm fond of.</p>
+				video which can be seen below, scored to Fanfare for the Common Man.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
 				flight computer, and was the second flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
 				to the RX Receiver module, which is housed in a 3D printed box I designed and printed, a photo of which is included below. 
-				This box was my second design and includes a holster area for my cell phone, which is used to display the track data.</p>
+				This box was my second design and the lid incorporates a holster area for my cell phone, which is used to display the track data.</p>
 				<p>The flight was a success, but the Eggfinder TX transmitter ripped out from the mounting, which likely happened when 
 				the rocket landed. The antenna was poorly soldered (I should have used more) and it came loose from the board. There was no 
 				other damage to the board or rocket, in part due to the use of nylon screws into metal standoffs to mound the Stratologger 
