--- a/files/ch_f5.html
+++ b/files/ch_f5.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f4.html" role="button">Previous</a>
-			Charlie Horse Flight 5
-			<a class="btn btn-lg btn-info" href="ch_f6.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f4.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 5</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f6.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -106,14 +117,15 @@
 			<p><p/>
 				<p>Flight #5 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site during the 2019 Tripoli National Sport Launch (NSL). Charlie Horse's second launch of the event was 
-				documented by a pad-side Go Pro camera, as well as a DJI Phanton II Drone hovering several hundred feet in the air. 
-				A combined video of these perspectived can be seen below.</p>
+				documented by a pad-side Go Pro camera, as well as a DJI Phantom II Drone hovering several hundred feet in the air. 
+				A combined video of these perspectives can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
 				flight computer. Both performed admirably and without incident.</p>
-				<p>The flight was a success, and is currently the record holder for fastest & highest flight on record for both this 
-				rocket and any of my rockets. One minor issue was that the nose cone eye bolt that attaches to the shock cord was 
+				<p>The flight was a success, and is currently the record holder for fastest & highest flight for both this 
+				and all of my rockets. One minor issue was that the nose cone eye bolt which attaches to the shock cord was 
 				ripped out of the nose cone. This caused the nose cone to fall back to the ground without a parachute and it created 
-				an interesting chipped pattern in the paint. The photo below looks to me like a lady in a long dress holing a shotgun... 
+				an interesting chipped pattern in the paint. The nosecone was otherwise undamaged and used on future flights after 
+				repairs to the eye bolt connection. The photo of the chipped paint looks to me like a lady in a long dress holding a shotgun... 
 				What do you see?</p>
 			</div>
 		</div>
