--- a/files/ch_f7.html
+++ b/files/ch_f7.html
@@ -82,10 +82,21 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			
-			<h1 style="padding-top: 15px;"><a class="btn btn-lg btn-info" href="ch_f6.html" role="button">Previous</a>
-			Charlie Horse Flight 7
-			<a class="btn btn-lg btn-info" href="ch_f8.html" role="button">Next</a></h1>
+			<div class="row">
+				<div class="col-sm-2">
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f6.html" role="button">Previous</a>
+				</div>
+				<div class="col-sm-4">
+					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 7</h1>
+				</div>
+				<div class="col-sm-2">
+					<a class="btn btn-lg btn-info" href="ch_f8.html" role="button">Next</a>
+				</div>
+				<div class="col-sm-2">
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -106,7 +117,7 @@
 			<p><p/>
 				<p>Flight #7 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site. The launch was documented by a pad-side Go Pro camera, an onboard camera, and a video taken on 
-				my cell phone, all of which can be seen below.</p>
+				my cell phone all of which can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
 				flight computer. Both performed admirably and without incident.</p>
 				<p>The flight was successful right up until the main parachute deployed tangled and did not properly unfurl. Evidence of 
