--- a/files/charlie_horse.html
+++ b/files/charlie_horse.html
@@ -201,6 +201,7 @@
 		<h2 class="featurette-heading">Summary</h2>
 		<p class="lead">Click buttons above or links below for detailed info</p>
 		<div class="row featurette">
+			<div class="table-responsive">
 			<table class="table">
 				<thead>
 				<tr>
@@ -243,7 +244,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">7</th>
-				  <td>8/10/2020</td>
+				  <td>8/10/2019</td>
 				  <td>AT J425-R</td>
 				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
 				  <td>3,649</td>
@@ -252,7 +253,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">6</th>
-				  <td>7/20/2020</td>
+				  <td>7/20/2019</td>
 				  <td>AT J435-WS</td>
 				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
 				  <td>4,258</td>
@@ -261,7 +262,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">5</th>
-				  <td>6/8/2020</td>
+				  <td>6/8/2019</td>
 				  <td>CTI J520-SK</td>
 				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
 				  <td>4,642</td>
@@ -270,7 +271,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">4</th>
-				  <td>6/8/2020</td>
+				  <td>6/8/2019</td>
 				  <td>AT J425-R</td>
 				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
 				  <td>3,948</td>
@@ -279,7 +280,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">3</th>
-				  <td>6/11/2020</td>
+				  <td>6/11/2017</td>
 				  <td>CTI J381-SK</td>
 				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
 				  <td>3,514</td>
@@ -297,7 +298,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">1</th>
-				  <td>8/13/2020</td>
+				  <td>8/13/2016</td>
 				  <td>CTI I255-RL</td>
 				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
 				  <td>No Logger</td>
@@ -306,6 +307,7 @@
 				</tr>
 				</tbody>
 			</table>
+			</div>
 		</div>
 		<hr class="featurette-divider">
 	</div>
