Fixed main page menu on small screens.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 	<!-- Navbar -->
 	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container-fluid">
+		<div class="container-fluid" style="text-align: left;">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse"
 				data-target="#myNavbar">
